Add single-grouping stats endpoint for https://github.com/nih-cfde/dashboard/issues/144
